--- a/review/templates/review.html
+++ b/review/templates/review.html
@@ -1,3 +1,8 @@
+{% extends 'base.html' %}
+{% block title %}{{ post.title_tag }}{% endblock %}
+
+
+{% block content %}
 <h1>{{ post.title }}</h1>
 <small>By: {{ post.author}} </small><br>
 
@@ -5,4 +10,7 @@
 <br>
 <br>
 
-<a href="{% url 'home' %}">back</a>
+<a href="{% url 'home' %}" class="btn btn-secondary">Home</a>
+
+
+{% endblock %}
