--- a/review/templates/base.html
+++ b/review/templates/base.html
@@ -21,7 +21,7 @@
             <ul class="navbar-nav">
               
               <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
+                <a class="nav-link" href="{% url 'post' %}">Add project</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Pricing</a>
