--- a/review/templates/review.html
+++ b/review/templates/review.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h1>{{ post.title }}</h1>
-<small>By: {{ post.author}} </small><br>
+<small>By: {{ post.author}} </small> <a href="{% url 'update' post.pk %}">Edit</a> <br><br>
 
 {{ post.body }}
 <br>
