--- a/review/templates/home.html
+++ b/review/templates/home.html
@@ -8,7 +8,9 @@
 
 <ul> {% for post in object_list %}
     <li><a href="{% url 'review' post.pk %}"> {{ post.title }} </a> 
-       {{post.author.username }} <a href="{% url 'update' post.pk %}">Edit</a> <br>
+       {{post.author.username }} 
+       
+       <a href="{% url 'delete' post.pk %}">Delete</a> <br>
        {{ post.body }}</li>
 
 {% endfor %}
