--- a/review/templates/base.html
+++ b/review/templates/base.html
@@ -20,14 +20,27 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'post' %}">Add project</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
+              {% if user.is_authenticated %}
+                    
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'post' %}">Add project</a>
+                  </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout'%}">Logout</a>
+                  </li>
+
+              {% else %}
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'register'%}">Register</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login'%}">Login</a>
+                  </li>
+              {% endif %}
+
+
               
-            </ul>
           </div>
         </div>
       </nav>
