--- a/review/templates/review.html
+++ b/review/templates/review.html
@@ -3,12 +3,20 @@
 
 
 {% block content %}
-<h1>{{ post.title }}</h1>
-<small>By: {{ post.author}} </small> <a href="{% url 'update' post.pk %}">Edit</a> <br><br>
 
+
+<h1>{{ post.title }}  </h1>
+{% if user.is_authenticated %}
+
+{% if user.id == post.author.id %}
+   <small>By: {{ post.author}} {{ post.date }} </small> <a href="{% url 'update' post.pk %}">Edit</a> <br><br>
+{% endif %}
 {{ post.body }}
 <br>
 <br>
+{%else%}
+<h3>Kindly register with project review first!!!!!</h3>
+{% endif %}
 
 <a href="{% url 'home' %}" class="btn btn-secondary">Home</a>
 
