--- a/review/templates/add_post.html
+++ b/review/templates/add_post.html
@@ -16,5 +16,9 @@
     <button class="btn btn-secondary">Upload</button>
 </form>
 </div>
+<script>
+    var name = '{{ user.username }}';
+    document.getElementById('author').placeholder = name;
+</script>
 
 {% endblock %}
